# ThermostatController-Refactoring-Kata

./: LICENSE  README.md
c_ceedling/src/: HVAC.c  ThermostatController.c  ThermostatController.h
c_ceedling/test/: test_ThermostatController.c
c_ceedling/test/support/: unity_config.h
c_cmocka/: CMakeLists.txt  README.md
c_cmocka/src/: CMakeLists.txt  HVAC.c  HVAC.h  ThermostatController.c  ThermostatController.h
c_cmocka/test-cmocka/: CMakeLists.txt
c_cmocka/test-cmocka/hvac_test/: CMakeLists.txt  hvac_test.c
c_cmocka/test-cmocka/hvac_test_with_fake/: CMakeLists.txt  hvac_fake.c  hvac_fake.h  hvac_test.c
c_cmocka/test-cmocka/hvac_test_with_mock/: CMakeLists.txt  hvac_test.c
c_cmocka/test-cmocka/hvac_test_with_spy/: CMakeLists.txt  hvac_test.c
c_cmocka/test-cmocka/hvac_test_with_stub/: CMakeLists.txt  hvac_test.c
