set(SRC_LIB_NAME src)
set(SOURCES HVAC.c ThermostatController.c ../test-cmocka/hvac_test_with_fake/hvac_fake.h ../test-cmocka/hvac_test_with_fake/hvac_fake.c)
add_library(${SRC_LIB_NAME} ${SOURCES})
target_sources(${SRC_LIB_NAME} PRIVATE ${SOURCES})
target_include_directories(${SRC_LIB_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
